<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="16dp">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/constraintLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:context=".CrimeFragment">

		<ImageView
			android:id="@+id/crime_photo"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:src="@drawable/ic_person"
			app:layout_constraintEnd_toStartOf="@+id/textView"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			android:contentDescription="@string/crime_photo_no_image_description" />

		<ImageButton
			android:id="@+id/crime_camera"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:src="@android:drawable/ic_menu_camera"
			app:layout_constraintEnd_toEndOf="@+id/crime_photo"
			app:layout_constraintStart_toStartOf="@+id/crime_photo"
			app:layout_constraintTop_toBottomOf="@+id/crime_photo"
			android:contentDescription="@string/crime_photo_button_description"/>


		<TextView
			android:id="@+id/textView"
			style="?android:listSeparatorTextViewStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/crime_title_label"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/crime_photo"
			app:layout_constraintTop_toTopOf="@+id/crime_photo" />

		<EditText
			android:id="@+id/crime_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/crime_title_hint"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/crime_photo"
			app:layout_constraintTop_toBottomOf="@+id/textView"
			tools:ignore="TouchTargetSizeCheck" />


		<TextView
			android:id="@+id/textView2"
			style="?android:listSeparatorTextViewStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/crime_details_label"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/crime_camera" />

		<Button
			android:id="@+id/crime_date"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/textView2"
			tools:text="@string/crime_date_btn"
			android:contentDescription="@string/crime_date_btn"/>


		<CheckBox
			android:id="@+id/crime_solved"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/crime_solved_label"
			app:layout_constraintBaseline_toBaselineOf="@+id/required_police"
			app:layout_constraintEnd_toStartOf="@+id/required_police"
			app:layout_constraintStart_toStartOf="parent" />

		<CheckBox
			android:id="@+id/required_police"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/required_police"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/crime_solved"
			app:layout_constraintTop_toBottomOf="@+id/crime_date" />


		<Button
			android:id="@+id/crime_suspect"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/crime_suspect_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/crime_solved" />

		<Button
			android:id="@+id/crime_report"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/crime_report_text"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/crime_suspect" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>